--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,6 +1,7 @@
+
 <h1 class="main-margen-superior animate__animated animate__fadeIn">PROYECTOS</h1>
 
-<div class="proyectos" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
+<div class="proyectos main-padding-superior main-padding-inferior" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
   <!-- Contenido específico para cada servicio -->
 <div class="proyectos__content animate__animated animate__fadeIn"  *ngFor="let proyecto of proyectos">
 
@@ -15,9 +16,10 @@
 
 
   </div>
-  
+
   <p-scrollTop />
 
 </div>
+
 
 
