--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -2,9 +2,9 @@
 
 <div class="contacto">
 
-  <div class="contacto__content container main-padding-superior ">
+  <div class="contacto__content container main-padding-superior animate__animated animate__fadeIn">
 
-    <div class="contacto__info animate__animated animate__fadeInLeft">
+    <div class="contacto__info">
       <p>
         ¡Gracias por tu interés en contactar con <strong>Basamento SRL</strong>! Estamos entusiasmados por conocer cómo
         podemos colaborar contigo en tu próximo proyecto. Ya sea que requieras más detalles, quieras solicitar un
@@ -15,7 +15,7 @@
       <img src="assets/imagenes/contacto/img-contacto.jpg" alt="">
     </div>
 
-    <div class="contacto__form animate__animated animate__zoomIn">
+    <div class="contacto__form">
 
       <h2>Formulario de Contacto</h2>
 
@@ -88,7 +88,7 @@
   </div>
 
   <div class="contacto contacto__contact main-padding-superior main-padding-inferior">
-    <section>
+    <section data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <span class="material-symbols-outlined">
         phone_in_talk
         </span>
@@ -96,7 +96,7 @@
       <p>+54 9 (3462) 553824 / 537066</p>
     </section>
 
-    <section>
+    <section data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <span class="material-symbols-outlined">
         pin_drop
       </span>
@@ -104,7 +104,7 @@
       <p>Tucuman 555</p>
     </section>
 
-    <section>
+    <section data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <span class="material-symbols-outlined">
         timer
       </span>
@@ -114,7 +114,7 @@
 
   </div>
 
-  <div  class="contacto contacto__map container main-padding-inferior">
+  <div  data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"  class="contacto contacto__map container main-padding-inferior">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7889.605351467845!2d-61.96701362981567!3d-33.75626155555726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c87b487979cc21%3A0x6ccc11578cb91bd7!2sTucum%C3%A1n%20555%2C%20Venado%20Tuerto%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1710996967871!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
  </div>
 
