--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,10 +1,10 @@
 <h1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </h1>
 
-<div class="nosotros main-padding-superior main-padding-inferior">
+<div class="nosotros main-padding-superior main-padding-inferior animate__animated animate__fadeIn">
 
   <div class="container">
 
-    <h2> ¿Por qué Elegirnos? </h2>
+    <h2 data-aos="zoom-out"> ¿Por qué Elegirnos? </h2>
     <hr>
 
     <div class="nosotros__card">
@@ -85,7 +85,7 @@
 
     </div>
 
-    <h2> ¿Quiénes somos?? </h2>
+    <h2 data-aos="zoom-out"> ¿Quiénes somos?? </h2>
     <hr>
     <div class="nosotros__info">
       <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
@@ -107,12 +107,12 @@
           eficiente gestión de sus activos de infraestructura, con un enfoque en la sustentabilidad y la calidad.
         </strong>
       </p>
-      <img src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
+      <img  data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
     </div>
 
     <div class="nosotros__content">
       <!-- <app-preguntas-frecuentes /> -->
-      <h2>Preguntas Frecuentes</h2>
+      <h2 data-aos="zoom-out">Preguntas Frecuentes</h2>
       <hr>
 
       <div>
@@ -163,11 +163,11 @@
     </div>
 
     <div class="nosotros nosotros__contact">
-      <h2> Contáctanos Ahora </h2>
+      <h2 data-aos="zoom-out"> Contáctanos Ahora </h2>
       <hr>
       <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
         los riesgos asociados</p>
-      <button routerLink="/contacto">Contacto</button>
+      <button data-aos="flip-up" routerLink="/contacto">Contacto</button>
     </div>
 
     <p-scrollTop />
