--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -4,7 +4,7 @@
 
   <div class="container">
 
-    <h2 data-aos="zoom-out"> ¿Por qué Elegirnos? </h2>
+    <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué Elegirnos? </h2>
     <hr>
 
     <div class="nosotros__card">
@@ -85,7 +85,7 @@
 
     </div>
 
-    <h2 data-aos="zoom-out"> ¿Quiénes somos?? </h2>
+    <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Quiénes somos?? </h2>
     <hr>
     <div class="nosotros__info">
       <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
@@ -112,7 +112,7 @@
 
     <div class="nosotros__content">
       <!-- <app-preguntas-frecuentes /> -->
-      <h2 data-aos="zoom-out">Preguntas Frecuentes</h2>
+      <h2 data-aos="zoom-out" data-aos-duration="1000">Preguntas Frecuentes</h2>
       <hr>
 
       <div>
@@ -163,11 +163,11 @@
     </div>
 
     <div class="nosotros nosotros__contact">
-      <h2 data-aos="zoom-out"> Contáctanos Ahora </h2>
+      <h2 data-aos="zoom-out" data-aos-duration="1000"> Contáctanos Ahora </h2>
       <hr>
       <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
         los riesgos asociados</p>
-      <button data-aos="flip-up" routerLink="/contacto">Contacto</button>
+      <button data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
     </div>
 
     <p-scrollTop />
