Updated: Agregamos el video de presentacion: PC

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,22 +1,15 @@
 <shared-header></shared-header>
 <h1 class="main-margen-superior animate__animated animate__fadeIn">INICIO</h1>
+<div class="home">
+  <div class="home__content">
+    <video class="home__content__video" controls>
+      <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
+      Tu navegador no soporta el elemento de video.
+    </video>
+    <div class="home__content__info">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At impedit obcaecati suscipit et magni qui asperiores dicta! Nobis, necessitatibus atque iste incidunt repellendus ratione sed maiores minima soluta doloremque. Quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorum illum corrupti, autem perferendis facilis? Quisquam earum, ullam non repudiandae fugiat corporis veniam quod labore iusto, distinctio itaque perferendis dicta?</p>
+    </div>
+  </div>
 
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
-<p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
+</div>
 
