Updated: Arreglamos estilos generales de la aplicacion: PC

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <shared-header></shared-header>
-<h1 class="main-margen-superior animate__animated animate__fadeIn">INICIO</h1>
-<div class="home">
+
+<!-- <div class="home content">
   <div class="home__content">
-    <video class="home__content__video" controls>
+    <video class="home__content__video puff-in-center" controls>
       <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
       Tu navegador no soporta el elemento de video.
     </video>
@@ -10,6 +10,5 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At impedit obcaecati suscipit et magni qui asperiores dicta! Nobis, necessitatibus atque iste incidunt repellendus ratione sed maiores minima soluta doloremque. Quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorum illum corrupti, autem perferendis facilis? Quisquam earum, ullam non repudiandae fugiat corporis veniam quod labore iusto, distinctio itaque perferendis dicta?</p>
     </div>
   </div>
-
-</div>
+</div> -->
 
