--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,6 +1,7 @@
-<h1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </h1>
 
-<div class="nosotros main-padding-superior main-padding-inferior animate__animated animate__fadeIn">
+<div class="nosotros content animate__animated animate__fadeIn">
+
+  <h1 class=" title-margin-bottom animate__animated animate__fadeIn"> NOSOTROS </h1>
 
   <div class="container">
 
@@ -167,7 +168,7 @@
       <hr>
       <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
         los riesgos asociados</p>
-      <button data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
+      <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
     </div>
 
     <p-scrollTop />
