--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -8,7 +8,7 @@ $color-background: #EFF5F5;
     flex-wrap: wrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    margin-bottom: 5rem;
+    // margin-bottom: 5rem;
 
     &--destacado {
       background-color: $color-background;
