--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -1,5 +1,10 @@
 
-<h1>ENCABEZADO</h1>
+<div class="header-container">
+  <img class="kenburns-top" src="../../../../assets/imagenes/home/header.jpg" alt="">
+  <h1 class="focus-in-contract-bck">BIENVENIDOS A BASAMENTO SRL</h1>
+</div>
+
+
 
 
 
