--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -1,8 +1,9 @@
-<h1 class="main-margen-superior animate__animated animate__fadeIn">CONTACTO</h1>
 
-<div class="contacto">
+<div class="contacto content">
 
-  <div class="contacto__content container main-padding-superior animate__animated animate__fadeIn">
+  <h1 class="title-margin-bottom animate__animated animate__fadeIn">CONTACTO</h1>
+
+  <div class="contacto__content container animate__animated animate__fadeIn">
 
     <div class="contacto__info">
       <p>
@@ -12,7 +13,7 @@
         consultas.
       </p>
       <!-- <p-image src="assets/imagenes/contacto/img-contacto.jpg" alt="Image"></p-image> -->
-      <img src="assets/imagenes/contacto/img-contacto.jpg" alt="">
+      <img class="swing-in-top-fwd" src="assets/imagenes/contacto/img-contacto.jpg" alt="">
     </div>
 
     <div class="contacto__form">
@@ -87,7 +88,7 @@
 
   </div>
 
-  <div class="contacto contacto__contact main-padding-superior main-padding-inferior">
+  <div class="contacto contacto__contact">
     <section data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <span class="material-symbols-outlined">
         phone_in_talk
@@ -114,8 +115,8 @@
 
   </div>
 
-  <div  data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"  class="contacto contacto__map container main-padding-inferior">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7889.605351467845!2d-61.96701362981567!3d-33.75626155555726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c87b487979cc21%3A0x6ccc11578cb91bd7!2sTucum%C3%A1n%20555%2C%20Venado%20Tuerto%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1710996967871!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"  class="contacto contacto__map container last-content">
+    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7889.605351467845!2d-61.96701362981567!3d-33.75626155555726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c87b487979cc21%3A0x6ccc11578cb91bd7!2sTucum%C3%A1n%20555%2C%20Venado%20Tuerto%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1710996967871!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
  </div>
 
  <p-scrollTop />
