--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,7 +1,7 @@
 
-<div class="servicios">
+<div class="servicios content">
 
-  <h1 class="main-margen-superior animate__animated animate__fadeIn">SERVICIOS</h1>
+  <h1 class="title-margin-bottom animate__animated animate__fadeIn">SERVICIOS</h1>
 
   <div class="servicios__content servicios__content--destacado">
 
@@ -149,7 +149,6 @@
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Equipos y maquinaria </p>
 
     </div>
-
 
   </div>
 
