--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,8 +1,27 @@
-.video-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: auto;
-  width: 22rem;
+.header-container {
+  position: relative;
+  width: 100%;
+  height: 400px; /* Ajusta la altura según necesites */
+}
+
+img.kenburns-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+h1.focus-in-contract-bck {
+  position: absolute;
+  top: 50%;
+  // left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: rem;
+  text-align: center;
+  width: 100%;
+  margin: 0; /* Elimina el margen por defecto del párrafo */
 }
 
