--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 .header-container {
   position: relative;
   width: 100%;
-  height: 400px; /* Ajusta la altura según necesites */
+  height: 550px;
 }
 
 img.kenburns-top {
@@ -19,7 +19,7 @@ h1.focus-in-contract-bck {
   // left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: rem;
+  font-size: 2rem;
   text-align: center;
   width: 100%;
   margin: 0; /* Elimina el margen por defecto del párrafo */
