Updated: Agregamos los enlases de las redes sociales del footer: PC

--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -34,13 +34,13 @@
   <div class="footer__social-container">
 
     <div class="footer__social">
-      <a href="https://tu-enlace-de-whatsapp" target="_blank" rel="noopener noreferrer" class="footer__social-link">
+      <a href="https://wa.me/3462553824" target="_blank" rel="noopener noreferrer" class="footer__social-link">
         <i class="pi pi-whatsapp"></i>
       </a>
-      <a href="https://tu-enlace-de-instagram" target="_blank" rel="noopener noreferrer" class="footer__social-link">
+      <a href="https://www.instagram.com/basamento.srl" target="_blank" rel="noopener noreferrer" class="footer__social-link">
         <i class="pi pi-instagram"></i>
       </a>
-      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer" class="footer__social-link">
+      <a href="https://www.facebook.com/people/Basamento-SRL/100076497602073/?mibextid=qi2Omg" target="_blank" rel="noopener noreferrer" class="footer__social-link">
         <i class="pi pi-facebook"></i>
       </a>
     </div>
