Updated: Agregamos el loading de carga: PC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-  <div>
-    <router-outlet></router-outlet>
-  </div>
+<div>
+  <app-loading-component *ngIf="isLoading" [isLoading]="isLoading"></app-loading-component>
+  <router-outlet *ngIf="!isLoading"></router-outlet>
+</div>
+
 
